<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.polinominom.mococo.MainActivity"
    android:weightSum="1">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="3"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upgrade_button_name"
            android:textSize="45sp"
            android:layout_marginBottom="25dp"
            android:textStyle="bold"
            android:layout_row="0"
            android:layout_column="0" />

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upgrade_points_name"
            android:id="@+id/upgrade_player_isl"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_marginBottom="25dp"/>


        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="left"
            android:layout_marginTop="15dp"
            android:layout_row="2"
            android:layout_column="0">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_status_name"
                android:textSize="15sp"
                android:textStyle="italic"
                android:layout_marginBottom="25dp"
                android:id="@+id/upgrade_strength_text_view"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/int_status_name"
                android:textSize="15sp"
                android:textStyle="italic"
                android:layout_marginBottom="25dp"
                android:id="@+id/upgrade_intelligent_text_view"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/luck_status_name"
                android:textSize="15sp"
                android:textStyle="italic"
                android:id="@+id/upgrade_luck_text_view"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="211dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="left"
            android:layout_row="2"
            android:layout_column="1">


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Buy Str"
                android:layout_marginBottom="5dp"
                android:onClick="onBuyStrClick"
                android:padding="0dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Buy Int"
                android:layout_marginBottom="5dp"
                android:onClick="onBuyIntClick"
                android:padding="0dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Buy Luck"
                android:padding="0dp"
                android:layout_marginBottom="5dp"
                android:onClick="onBuyLuckClick"/>

        </LinearLayout>

    </GridLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="bottom"
        android:id="@+id/linear_button_layout"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_button_name"
            android:layout_gravity="bottom"
            android:onClick="onProfileButtonClick"
            android:background="@color/reddy"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dungeon_button_name"
            android:layout_gravity="bottom"
            android:onClick="onDungeonButtonClick"
            android:background="@color/reddy"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quest_button_name"
            android:onClick="onQuestButtonClick"
            android:background="@color/reddy"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shop_button_name"
            android:onClick="onShopButtonClick"
            android:background="@color/reddy"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upgrade_button_name"
            android:onClick="onUpgradeButtonClick"
            android:background="@color/reddy" />

    </LinearLayout>

</RelativeLayout>