<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="220dp"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:orientation="vertical"
        android:id="@+id/gridLayout"
        android:layout_alignParentBottom="true">


        <TextView
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:text="@string/choose_floor_text_name"
            android:textSize="25sp"
            android:textStyle="bold"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/floor_spinner_id"
            android:layout_marginBottom="40dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/monster_list_text_name"
            android:textSize="25sp"
            android:textStyle="bold"
            android:id="@+id/monster_list_text_view"/>

        <ListView
            android:layout_width="190dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/monster_list_id">

        </ListView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="220dp"
        android:orientation="vertical"
        android:gravity="top"
        android:layout_above="@+id/linear_button_layout"
        android:layout_alignRight="@+id/linear_button_layout"
        android:layout_alignEnd="@+id/linear_button_layout"
        android:layout_toRightOf="@+id/gridLayout"
        android:layout_toEndOf="@+id/gridLayout"
        android:layout_alignParentTop="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/player_status_dungeon_text_id"
            android:layout_gravity="top"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/monster_info_status_area"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="bottom"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@+id/gridLayout"
        android:id="@+id/linear_button_layout">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_button_name"
            android:layout_gravity="bottom"
            android:onClick="onProfileButtonClick"
            android:background="@color/reddy"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dungeon_button_name"
            android:layout_gravity="bottom"
            android:onClick="onDungeonButtonClick"
            android:background="@color/reddy"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quest_button_name"
            android:onClick="onQuestButtonClick"
            android:background="@color/reddy"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shop_button_name"
            android:onClick="onShopButtonClick"
            android:background="@color/reddy"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upgrade_button_name"
            android:onClick="onUpgradeButtonClick"
            android:background="@color/reddy" />

    </LinearLayout>



</RelativeLayout>