<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center|top"
    tools:context="com.example.polinominom.mococo.MainActivity">

    <Button
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:text="@string/play_button_name"
        android:textSize="15sp"
        android:textStyle="bold"
        android:padding="20dp"
        android:layout_marginBottom="50dp"
        android:onClick="onPlayButtonClick"
        android:id="@+id/play_button_id"/>

    <Button
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:text="@string/option_button_name"
        android:textSize="15sp"
        android:textStyle="bold"
        android:padding="20dp"
        android:layout_marginBottom="50dp"
        android:onClick="onOptionButtonClick"
        android:id="@+id/option_button_id"/>

    <Button
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:text="@string/howtoplay_button_name"
        android:textSize="15sp"
        android:textStyle="bold"
        android:padding="20dp"
        android:layout_marginBottom="50dp"
        android:onClick="onHowToPlayButtonClick"
        android:id="@+id/how_to_play_button_id"/>

    <Button
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:text="@string/about_button_name"
        android:textSize="15sp"
        android:textStyle="bold"
        android:padding="20dp"
        android:layout_marginBottom="10dp"
        android:onClick="onAboutButtonClick"
        android:id="@+id/about_button_id"/>
    
    
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TEST"
        android:onClick="onTestClick"/>
    
</LinearLayout>
